--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,3 +1,7 @@
+/* Write your global styles here, in PostCSS syntax */
+
+@tailwind base;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -40,9 +44,9 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: 0 auto;
-  padding: 2rem;
+  /*padding: 2rem;*/
   text-align: center;
 }
 
@@ -77,3 +81,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@tailwind components;
+
+@tailwind utilities;
